ferrite-os/native/core/include/gpu/gpu_hot_runtime.h

// ============================================================================
// Configuration Constants
// ============================================================================

#define GPU_HOT_MAX_STREAMS         100000  // Configurable via GPUHotConfig (software queues) - UNLIMITED!
#define GPU_HOT_MAX_KERNELS         256
#define GPU_HOT_MAX_GRAPHS          256     // Increased for massive parallelism
#define GPU_HOT_MAX_NAMED_SEGMENTS  256
#define GPU_HOT_MAX_NAME_LEN        64
#define GPU_HOT_DEFAULT_VRAM_PERCENT 70.0f
// TLSF Allocator Configuration
// FL_INDEX_MAX = 34 supports up to 2^34 = 16GB single allocations
// This is needed for large LLM KV caches (7B model = ~2-4GB KV cache)
#define TLSF_FL_INDEX_MAX           34
#define TLSF_SL_INDEX_COUNT         16
#define TLSF_MIN_BLOCK_SIZE         64
#define TLSF_ALIGNMENT              256
// PTX-OS Task Queue
#define PTX_MAX_QUEUE_SIZE          1024
#define PTX_MAX_TASK_ARGS           8
// Priority Levels
#define PTX_PRIORITY_REALTIME       0
#define PTX_PRIORITY_HIGH           1
#define PTX_PRIORITY_NORMAL         2
#define PTX_PRIORITY_LOW            3
// VMM Configuration
#define VMM_PAGE_SIZE               (64 * 1024)  // 64KB pages
#define VMM_MAX_PAGES               16384
#define VMM_MAX_SWAP_REGIONS        256
// VFS Configuration
#define VFS_MAX_NODES               1024
#define VFS_MAX_PATH_LEN            256
#define VFS_MAX_OPEN_FILES          256
// ============================================================================
// Forward Declarations
// ============================================================================

struct GPUHotRuntime;
typedef struct GPUHotRuntime GPUHotRuntime;
struct PTXTLSFAllocator;
typedef struct PTXTLSFAllocator PTXTLSFAllocator;
// ============================================================================
// TLSF Block Structure (Host-side metadata)
// ============================================================================

typedef struct TLSFBlock {
    void* device_ptr;           // Pointer to GPU memory
    size_t size;                // Block size in bytes
    uint32_t magic;             // Validation magic number

    struct TLSFBlock* prev_phys; // Previous physical block
    struct TLSFBlock* next_phys; // Next physical block
    struct TLSFBlock* prev_free; // Previous in free list
    struct TLSFBlock* next_free; // Next in free list
    struct TLSFBlock* hash_next; // Next in hash chain

    bool is_free;
    bool is_last;
    bool is_pinned;             // Prevent coalescing/eviction

    // Debug info
    uint32_t alloc_id;
    const char* alloc_file;
    int alloc_line;
    uint64_t alloc_timestamp;
    uint32_t owner_id;
} TLSFBlock;
// ============================================================================
// CUDA Graph Handle
// ============================================================================

typedef struct GPUGraphHandle {
    char name[GPU_HOT_MAX_NAME_LEN];
    cudaGraph_t graph;
    cudaGraphExec_t graph_exec;
    bool is_valid;
} GPUGraphHandle;
// ============================================================================
// Kernel Handle
// ============================================================================

typedef struct GPUKernelHandle {
    void* kernel_func;
    dim3 grid;
    dim3 block;
    size_t shared_mem;
    cudaStream_t stream;
} GPUKernelHandle;
// ============================================================================
// Global Registry Entry (IPC Shared Memory)
// ============================================================================

typedef struct GPURegistryEntry {
    char name[GPU_HOT_MAX_NAME_LEN];
    cudaIpcMemHandle_t ipc_handle;
    size_t size;
    bool active;
    uint64_t created_at;
    uint32_t ref_count;
    uint32_t owner_pid;
} GPURegistryEntry;
// ============================================================================
// PTX-OS Task Structure
// ============================================================================

typedef struct PTXOSTask {
    uint32_t task_id;
    uint32_t opcode;
    uint32_t priority;
    bool active;
    bool completed;
    void* args[PTX_MAX_TASK_ARGS];
    uint64_t submitted_at;
    uint64_t completed_at;
} PTXOSTask;
// ============================================================================
// PTX-OS Task Queue
// ============================================================================

typedef struct PTXTaskQueue {
    PTXOSTask tasks[PTX_MAX_QUEUE_SIZE];
    volatile uint32_t head;
    volatile uint32_t tail;
    volatile uint32_t lock;
} PTXTaskQueue;
// ============================================================================
// VMM Page Table Entry
// ============================================================================

typedef struct VMMPageEntry {
    void* gpu_addr;             // Current GPU address (may change after swap-in)
    void* original_addr;        // Original address returned to user (for lookup)
    void* host_addr;            // Host backing store (if swapped)
    size_t size;                // Page size
    uint32_t flags;             // Page flags
    uint64_t last_access;       // For LRU eviction
    uint32_t access_count;      // Access frequency
    bool resident;              // In GPU memory
    bool dirty;                 // Modified since last swap
    bool pinned;                // Cannot be evicted
} VMMPageEntry;
// VMM Flags
#define VMM_FLAG_READ       0x01
#define VMM_FLAG_WRITE      0x02
#define VMM_FLAG_EXEC       0x04
#define VMM_FLAG_SHARED     0x08
#define VMM_FLAG_PINNED     0x10
// ============================================================================
// VMM State
// ============================================================================

typedef struct VMMState {
    GPUHotRuntime* runtime;   // Owning runtime for allocations
    VMMPageEntry pages[VMM_MAX_PAGES];
    uint32_t num_pages;
    uint32_t resident_pages;
    uint32_t swapped_pages;

    // Swap regions (host memory backing store)
    void* swap_regions[VMM_MAX_SWAP_REGIONS];
    size_t swap_region_sizes[VMM_MAX_SWAP_REGIONS];
    uint32_t num_swap_regions;
    size_t total_swap_size;
    size_t used_swap_size;

    // Statistics
    uint64_t page_faults;
    uint64_t swap_ins;
    uint64_t swap_outs;
    uint64_t evictions;
} VMMState;
// ============================================================================
// VFS Inode Structure
// ============================================================================

typedef enum VFSNodeType {
    VFS_NODE_FILE,
    VFS_NODE_DIRECTORY,
    VFS_NODE_TENSOR,
    VFS_NODE_STREAM,
    VFS_NODE_DEVICE
} VFSNodeType;
typedef struct VFSInode {
    uint32_t inode_id;
    char name[GPU_HOT_MAX_NAME_LEN];
    char path[VFS_MAX_PATH_LEN];
    VFSNodeType type;

    // Data pointer (GPU memory for tensors)
    void* data;
    size_t size;

    // Tensor metadata (if type == VFS_NODE_TENSOR)
    int dims;
    int shape[8];
    int dtype;  // 0=f32, 1=f16, 2=i32, 3=i8

    // Tree structure
    struct VFSInode* parent;
    struct VFSInode* first_child;
    struct VFSInode* next_sibling;

    // Timestamps
    uint64_t created_at;
    uint64_t modified_at;
    uint64_t accessed_at;

    // Permissions
    uint32_t mode;
    uint32_t uid;
    uint32_t gid;

    bool active;
} VFSInode;
// VFS Open Flags
#define VFS_O_RDONLY    0x01
#define VFS_O_WRONLY    0x02
#define VFS_O_RDWR      0x03
#define VFS_O_CREAT     0x10
#define VFS_O_TRUNC     0x20
#define VFS_O_APPEND    0x40