ferrite-os/native/core/include/ptx_stable_runtime.h

#define PTX_STABLE_ABI_VERSION 1u
#define PTX_STABLE_CONFIG_DEFAULT 0u
#define PTX_STABLE_CONFIG_PREFER_ORIN_UM (1u << 0)
#define PTX_STABLE_CONFIG_USE_MANAGED_POOL (1u << 1)
#define PTX_STABLE_INVALID_DEVICE (-1)
typedef struct PTXStableRuntime PTXStableRuntime;
typedef enum PTXStableStatus {
    PTX_STABLE_OK = 0,
    PTX_STABLE_ERR_INVALID_ARG = 1,
    PTX_STABLE_ERR_ABI_MISMATCH = 2,
    PTX_STABLE_ERR_INIT_FAILED = 3,
    PTX_STABLE_ERR_NOT_INITIALIZED = 4,
    PTX_STABLE_ERR_NOT_OWNED = 5,
    PTX_STABLE_ERR_ALLOC_FAILED = 6,
    PTX_STABLE_ERR_INTERNAL = 7,
} PTXStableStatus;
typedef struct PTXStableConfig {
    uint32_t struct_size;      /* must be sizeof(PTXStableConfig) */
    uint32_t abi_version;      /* must be PTX_STABLE_ABI_VERSION */
    uint32_t flags;            /* behavior toggles: PTX_STABLE_CONFIG_* */
    int32_t device_id;         /* PTX_STABLE_INVALID_DEVICE => default device 0 */
    float pool_fraction;       /* 0.0 => ignored */
    uint64_t fixed_pool_size;  /* bytes, 0 => ignored */
    uint64_t reserve_vram;     /* bytes, 0 => runtime default */
    uint32_t max_streams;      /* 0 => runtime default */
    uint8_t quiet_init;        /* 1 => suppress runtime banner output */
    uint8_t enable_leak_detection;
    uint8_t enable_pool_health;
    uint8_t _reserved0;
} PTXStableConfig;
typedef struct PTXStableStats {
    uint64_t vram_allocated;
    uint64_t vram_used;
    uint64_t vram_free;
    float gpu_utilization;

    uint64_t pool_total;
    uint64_t pool_used;
    uint64_t pool_free;
    uint64_t pool_peak;
    uint64_t pool_fallbacks;
    float pool_fragmentation;

    uint64_t total_ops;
    uint32_t active_streams;
    uint32_t refcount;
    uint8_t watchdog_tripped;
    uint8_t _reserved[3];
} PTXStableStats;