ferrite-os/crates/internal/ptx-sys/src/lib.rs

//! Raw FFI bindings to PTX-OS GPU runtime and CUDA libraries.
//!
//! This crate provides unsafe bindings generated by bindgen from the PTX-OS headers.
//! For safe wrappers, use the `ptx-runtime` crate.
//!
//! # Safety
//!
//! All functions in this crate are unsafe. The caller must ensure:
//! - Valid pointers are passed
//! - Proper synchronization for concurrent access
//! - Memory is properly allocated via PTX-OS allocator

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]
#![allow(clippy::all)]

use libc::{c_char, c_int, c_uint, c_void, size_t, ssize_t};

// CUDA types as opaque pointers
pub type cudaStream_t = *mut c_void;
pub type cudaGraph_t = *mut c_void;
pub type cudaGraphExec_t = *mut c_void;
pub type cudaError_t = c_int;
pub type cudaGraphicsResource_t = *mut c_void;

// CUDA driver API context handle
pub type CUcontext = *mut c_void;

// dim3 struct for kernel launch configuration
#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct dim3 {
    pub x: u32,
    pub y: u32,
    pub z: u32,
}

impl dim3 {
    pub fn new(x: u32, y: u32, z: u32) -> Self {
        Self { x, y, z }
    }
}

// CUDA IPC memory handle
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cudaIpcMemHandle_t {
    pub reserved: [c_char; 64],
}

impl Default for cudaIpcMemHandle_t {
    fn default() -> Self {
        Self { reserved: [0; 64] }
    }
}

// Half precision type placeholder
#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct __half {
    pub x: u16,
}

// Type aliases for convenience
pub type DType = PTXDType;
pub type OpCode = PTXTensorOpcode;

// ============================================================================
// Configuration Constants
// ============================================================================

pub const GPU_HOT_MAX_STREAMS: u32 = 100000;  // UNLIMITED! Can run tens of thousands of streams!
pub const GPU_HOT_MAX_KERNELS: u32 = 256;
pub const GPU_HOT_MAX_GRAPHS: u32 = 256;      // Increased for graph pooling
pub const GPU_HOT_MAX_NAMED_SEGMENTS: u32 = 256;
pub const GPU_HOT_MAX_NAME_LEN: u32 = 64;
pub const GPU_HOT_DEFAULT_VRAM_PERCENT: f32 = 70.0;
pub const PTX_STABLE_ABI_VERSION: u32 = 1;
pub const PTX_STABLE_CONFIG_DEFAULT: u32 = 0;
pub const PTX_STABLE_CONFIG_PREFER_ORIN_UM: u32 = 1 << 0;
pub const PTX_STABLE_CONFIG_USE_MANAGED_POOL: u32 = 1 << 1;
pub const PTX_STABLE_INVALID_DEVICE: i32 = -1;

pub const TLSF_FL_INDEX_MAX: u32 = 32;
pub const TLSF_SL_INDEX_COUNT: u32 = 16;
pub const TLSF_MIN_BLOCK_SIZE: u32 = 64;
pub const TLSF_ALIGNMENT: u32 = 256;

pub const PTX_MAX_QUEUE_SIZE: u32 = 1024;
pub const PTX_MAX_TASK_ARGS: u32 = 8;

pub const PTX_PRIORITY_REALTIME: u32 = 0;
pub const PTX_PRIORITY_HIGH: u32 = 1;
pub const PTX_PRIORITY_NORMAL: u32 = 2;
pub const PTX_PRIORITY_LOW: u32 = 3;

pub const VMM_PAGE_SIZE: u32 = 64 * 1024;
pub const VMM_MAX_PAGES: u32 = 16384;
pub const VMM_MAX_SWAP_REGIONS: u32 = 256;

pub const VFS_MAX_NODES: u32 = 1024;
pub const VFS_MAX_PATH_LEN: u32 = 256;
pub const VFS_MAX_OPEN_FILES: u32 = 256;

// VMM Flags
pub const VMM_FLAG_READ: u32 = 0x01;
pub const VMM_FLAG_WRITE: u32 = 0x02;
pub const VMM_FLAG_EXEC: u32 = 0x04;
pub const VMM_FLAG_SHARED: u32 = 0x08;
pub const VMM_FLAG_PINNED: u32 = 0x10;

// VFS Open Flags
pub const VFS_O_RDONLY: u32 = 0x01;
pub const VFS_O_WRONLY: u32 = 0x02;
pub const VFS_O_RDWR: u32 = 0x03;
pub const VFS_O_CREAT: u32 = 0x10;
pub const VFS_O_TRUNC: u32 = 0x20;
pub const VFS_O_APPEND: u32 = 0x40;

// ============================================================================
// Tensor Opcodes
// ============================================================================

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash, Default)]
pub enum PTXTensorOpcode {
    // Binary Operations (0x10 - 0x1F)
    #[default]
    Add = 0x10,
    Sub = 0x11,
    Mul = 0x12,
    Div = 0x13,
    Max = 0x14,
    Min = 0x15,
    Pow = 0x16,
    Mod = 0x17,

    // Unary Operations (0x20 - 0x3F)
    Neg = 0x20,
    Abs = 0x21,
    Exp = 0x22,
    Log = 0x23,
    Log2 = 0x24,
    Log10 = 0x25,
    Sqrt = 0x26,
    Rsqrt = 0x27,
    Sin = 0x28,
    Cos = 0x29,
    Tan = 0x2A,
    Tanh = 0x2B,
    Sinh = 0x2C,
    Cosh = 0x2D,
    Ceil = 0x2E,
    Floor = 0x2F,
    Round = 0x30,
    Sign = 0x31,
    Recip = 0x32,
    Sqr = 0x33,
    Erf = 0x34,

    // Activation Functions (0x40 - 0x4F)
    Relu = 0x40,
    Relu6 = 0x41,
    LeakyRelu = 0x42,
    Elu = 0x43,
    Selu = 0x44,
    Gelu = 0x45,
    GeluTanh = 0x46,
    Sigmoid = 0x47,
    Silu = 0x48,
    Softplus = 0x49,
    Mish = 0x4A,
    HardSwish = 0x4B,
    HardSigmoid = 0x4C,

    // Reduction Operations (0x50 - 0x5F)
    ReduceSum = 0x50,
    ReduceMean = 0x51,
    ReduceMax = 0x52,
    ReduceMin = 0x53,
    ReduceProd = 0x54,
    ReduceArgmax = 0x55,
    ReduceArgmin = 0x56,

    // Softmax Operations (0x60 - 0x6F)
    Softmax = 0x60,
    LogSoftmax = 0x61,

    // Comparison Operations (0x70 - 0x7F)
    CmpEq = 0x70,
    CmpNe = 0x71,
    CmpLt = 0x72,
    CmpLe = 0x73,
    CmpGt = 0x74,
    CmpGe = 0x75,

    // Affine/Transform Operations (0x80 - 0x8F)
    Affine = 0x80,
    Clamp = 0x81,
    Where = 0x82,

    // Copy Operations (0x90 - 0x9F)
    Copy = 0x90,
    Cast = 0x91,
    Fill = 0x92,

    // Gather/Scatter Operations (0xB0 - 0xB5)
    Gather = 0xB0,
    ScatterAdd = 0xB1,
    IndexSelect = 0xB2,
    IndexAdd = 0xB3,

    // Scan/Prefix Operations (0xC0 - 0xC5)
    CumSum = 0xC0,

    // Sort/Select Operations (0xE0 - 0xEF)
    Argsort = 0xE1,
    TopK = 0xE2,
}

// ============================================================================
// Data Types
// ============================================================================

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash, Default)]
pub enum PTXDType {
    #[default]
    F32 = 0,
    F64 = 1,
    F16 = 2,
    BF16 = 3,
    I8 = 4,
    I16 = 5,
    I32 = 6,
    I64 = 7,
    U8 = 8,
    U32 = 9,
}

impl PTXDType {
    /// Size in bytes
    pub const fn size_bytes(&self) -> usize {
        match self {
            PTXDType::F32 => 4,
            PTXDType::F64 => 8,
            PTXDType::F16 => 2,
            PTXDType::BF16 => 2,
            PTXDType::I8 => 1,
            PTXDType::I16 => 2,
            PTXDType::I32 => 4,
            PTXDType::I64 => 8,
            PTXDType::U8 => 1,
            PTXDType::U32 => 4,
        }
    }
}

// ============================================================================
// VFS Node Type
// ============================================================================

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum VFSNodeType {
    File = 0,
    Directory = 1,
    Tensor = 2,
    Stream = 3,
    Device = 4,
}

// ============================================================================
// Opaque Runtime Pointer
// ============================================================================

#[repr(C)]
pub struct GPUHotRuntime {
    _private: [u8; 0],
}

#[repr(C)]
pub struct PTXTLSFAllocator {
    _private: [u8; 0],
}

#[repr(C)]
pub struct PTXStableRuntime {
    _private: [u8; 0],
}

#[repr(i32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum PTXStableStatus {
    Ok = 0,
    ErrInvalidArg = 1,
    ErrAbiMismatch = 2,
    ErrInitFailed = 3,
    ErrNotInitialized = 4,
    ErrNotOwned = 5,
    ErrAllocFailed = 6,
    ErrInternal = 7,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PTXStableConfig {
    pub struct_size: u32,
    pub abi_version: u32,
    pub flags: u32,
    pub device_id: i32,
    pub pool_fraction: f32,
    pub fixed_pool_size: u64,
    pub reserve_vram: u64,
    pub max_streams: u32,
    pub quiet_init: u8,
    pub enable_leak_detection: u8,
    pub enable_pool_health: u8,
    pub _reserved0: u8,
}

impl Default for PTXStableConfig {
    fn default() -> Self {
        Self {
            struct_size: std::mem::size_of::<PTXStableConfig>() as u32,
            abi_version: PTX_STABLE_ABI_VERSION,
            flags: PTX_STABLE_CONFIG_DEFAULT,
            device_id: PTX_STABLE_INVALID_DEVICE,
            pool_fraction: 0.0,
            fixed_pool_size: 0,
            reserve_vram: 0,
            max_streams: 0,
            quiet_init: 0,
            enable_leak_detection: 1,
            enable_pool_health: 1,
            _reserved0: 0,
        }
    }
}

#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct PTXStableStats {
    pub vram_allocated: u64,
    pub vram_used: u64,
    pub vram_free: u64,
    pub gpu_utilization: f32,
    pub pool_total: u64,
    pub pool_used: u64,
    pub pool_free: u64,
    pub pool_peak: u64,
    pub pool_fallbacks: u64,
    pub pool_fragmentation: f32,
    pub total_ops: u64,
    pub active_streams: u32,
    pub refcount: u32,
    pub watchdog_tripped: u8,
    pub _reserved: [u8; 3],
}

// ============================================================================
// Structures
// ============================================================================

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TLSFBlock {
    pub device_ptr: *mut c_void,
    pub size: size_t,
    pub magic: u32,
    pub prev_phys: *mut TLSFBlock,
    pub next_phys: *mut TLSFBlock,
    pub prev_free: *mut TLSFBlock,
    pub next_free: *mut TLSFBlock,
    pub hash_next: *mut TLSFBlock,
    pub is_free: bool,
    pub is_last: bool,
    pub is_pinned: bool,
    pub alloc_id: u32,
    pub alloc_file: *const c_char,
    pub alloc_line: c_int,
    pub alloc_timestamp: u64,
    pub owner_id: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GPUGraphHandle {
    pub name: [c_char; 64],
    pub graph: cudaGraph_t,
    pub graph_exec: cudaGraphExec_t,
    pub is_valid: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GPUKernelHandle {
    pub kernel_func: *mut c_void,
    pub grid: dim3,
    pub block: dim3,
    pub shared_mem: size_t,
    pub stream: cudaStream_t,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GPURegistryEntry {
    pub name: [c_char; 64],
    pub ipc_handle: cudaIpcMemHandle_t,
    pub size: size_t,
    pub active: bool,
    pub created_at: u64,
    pub ref_count: u32,
    pub owner_pid: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, Default)]
pub struct PTXOSTask {
    pub task_id: u32,
    pub opcode: u32,
    pub priority: u32,
    pub active: bool,
    pub completed: bool,
    pub args: [*mut c_void; 8],
    pub submitted_at: u64,
    pub completed_at: u64,
}

#[repr(C)]
#[derive(Debug)]
pub struct PTXTaskQueue {
    pub tasks: [PTXOSTask; 1024],
    pub head: u32,
    pub tail: u32,
    pub lock: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VMMPageEntry {
    pub gpu_addr: *mut c_void,
    pub original_addr: *mut c_void,
    pub host_addr: *mut c_void,
    pub size: size_t,
    pub flags: u32,
    pub last_access: u64,
    pub access_count: u32,
    pub resident: bool,
    pub dirty: bool,
    pub pinned: bool,
}

#[repr(C)]
pub struct VMMState {
    pub runtime: *mut GPUHotRuntime,
    pub pages: [VMMPageEntry; 16384],
    pub num_pages: u32,
    pub resident_pages: u32,
    pub swapped_pages: u32,
    pub swap_regions: [*mut c_void; 256],
    pub swap_region_sizes: [size_t; 256],
    pub num_swap_regions: u32,
    pub total_swap_size: size_t,
    pub used_swap_size: size_t,
    pub page_faults: u64,
    pub swap_ins: u64,
    pub swap_outs: u64,
    pub evictions: u64,
}

#[repr(C)]
#[derive(Debug)]
pub struct VFSInode {
    pub inode_id: u32,
    pub name: [c_char; 64],
    pub path: [c_char; 256],
    pub node_type: VFSNodeType,
    pub data: *mut c_void,
    pub size: size_t,
    pub dims: c_int,
    pub shape: [c_int; 8],
    pub dtype: c_int,
    pub parent: *mut VFSInode,
    pub first_child: *mut VFSInode,
    pub next_sibling: *mut VFSInode,
    pub created_at: u64,
    pub modified_at: u64,
    pub accessed_at: u64,
    pub mode: u32,
    pub uid: u32,
    pub gid: u32,
    pub active: bool,
}
